<resources>
    <!-- App name -->
    <string name="app_name">TodoAll</string>

    <!-- Stopwatch fragment -->
    <string name="stopwatch">Stopwatch</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="pause">Pause</string>
    <string name="start_string">Start</string>

    <!-- Notes fragment -->
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>

    <!-- DetailView fragment -->
    <string name="enter_your_title">Enter your title…</string>
    <string name="enter_your_note_here">Enter your note here…</string>
    <string name="choose_color">Choose the color for your note</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>

    <!-- DetailViewNote fragment -->
    <string name="detailViewNote">View Note</string>
    <string name="add">Add</string>
    <string name="color_DetailViewNote">Color of the note</string>
    <string name="go_back">Go back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit Note</string>
    <string name="discard_changes">Discard changes</string>
    <string name="save_changes">Save changes</string>

    <!-- Colors -->
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>

    <!-- Tasks fragment -->
    <string name="tasks">Tasks</string>
    <string name="tasks_fragment">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="priority">Priority</string>
    <string name="insert_task_hint">Insert your task here…</string>
    <string name="order_by">Order By Priority</string>
    <string name="order_by_date">Order By Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>